style.css
.pl-conference {
  position: relative;
  width: 100%;
  height: 100%;
}

.pl-video {
}

.pl-absent {
}

/* Local video is in bottom left corner */
.pl-local {
  position: absolute;
  bottom: 8px;
  left: 8px;
  width: 120px;
  height: 120px;
  z-index: 100;
  /* Local video is resized when remote video is resized (eg phone rotate) */
  transition: 0.2s ease-out;
  -webkit-transition: 0.2s ease-out;
}

/* Remote video is always full size */
.pl-remote {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

/* No video and no audio badges - style these, they're ugly right now */
.pl-no-video,
.pl-no-audio {
  margin: 16px;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 100;
  width: 100px;
  height: 100px;
  background: rgba(0,0,0,0.8);
  color: white;
}
.pl-no-video {
  left: auto;
  right: 0;
}

